# tsc

./: .gitignore  LICENSE  PROMPT_EXAMPLE.md  README.md  UI_CREATION.md  electron.vite.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  test-electron.js  test-electron2.js  tsconfig.json  tsconfig.node.tsbuildinfo
.github/workflows/: release.yml
backend/: README.md  __init__.py  file_ops_tsc.py  pyproject.toml  recover_messages.py  sandbox.py  server.py  server.spec
backend/agents/: __init__.py  dev_team.py  orchestrator.py
backend/state/: __init__.py  schemas.py
backend/tests/: test_sandbox_policy.py
backend/tools/: __init__.py  preview.py  workspace.py
docs/: websocket-events.md
electron/: main.ts  preload.ts  preview-proxy.ts  preview-server.ts  python-bridge.ts  store.ts  update-check.ts
electron/shims/: error-capture.js
installer/: README.md
installer/icons/: README.md
installer/icons/mac/: icon.icns
installer/win/: installer.nsh
misc/: LATTER_PROMPT.md  MODELS_APIS_PROVIDERS.md
patches/: dmg-builder+25.1.8.patch
scripts/: build-backend.sh  test-update-local.sh
src/: App.tsx  index.css
src/components/Chat/: AgentAvatar.tsx  ApprovalModal.tsx  ChatInputArea.tsx  DiffView.tsx  EmptyState.tsx  HandoffOverlay.tsx  Questionnaire.tsx  ScrollToBottomButton.tsx  StreamingContainer.tsx  SubagentThreadDialog.tsx  TaskTracker.tsx  ThreadSidebar.tsx  index.tsx
src/components/Dashboard/: index.tsx
src/hooks/: useAgentStream.ts  useChatLogic.ts
src/stores/: agentStore.ts
src/utils/: groupBlocks.ts  toolDisplay.ts
(+2 files in other folders)
